issue resolve for back button & forget password & google sign in

--- a/src/app/pages/patient/book-appointment/book-appointment.page.html
+++ b/src/app/pages/patient/book-appointment/book-appointment.page.html
@@ -1,7 +1,7 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
     <ion-buttons slot="start">
-      <ion-back-button defaultHref="/patient/search-doctors"></ion-back-button>
+      <ion-back-button defaultHref="/patient/dashboard"></ion-back-button>
     </ion-buttons>
     <ion-title>Book Appointment</ion-title>
   </ion-toolbar>
